--- a/public/index.html
+++ b/public/index.html
@@ -17,4 +17,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </html>
