--- a/public/index.html
+++ b/public/index.html
@@ -20,3 +20,7 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </html>
+
+
+<script>
+</script>
